Updated and improved tests and algorithms