@@ -6,8 +6,8 @@ buildscript {
 
 plugins {
     id 'java'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.41'
-    id "me.champeau.gradle.jmh" version "0.4.8"
+    id 'org.jetbrains.kotlin.jvm' version '1.4.21'
+    id "me.champeau.gradle.jmh" version "0.5.2"
 }
 
 apply plugin: 'idea'
@@ -22,20 +22,20 @@ group 'hse'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.9
+targetCompatibility = 1.9
 
 repositories {
     mavenCentral()
     jcenter()
     maven { url 'https://kotlin.bintray.com/kotlinx' }
-    maven { url 'https://dl.bintray.com/devexperts/Maven' }
 }
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    compile 'org.jetbrains.kotlinx:lincheck:2.6'
-    compile group: 'org.jctools', name: 'jctools-core', version: '3.0.0'
-    compile group: 'it.unimi.dsi', name: 'fastutil', version: '8.3.1'
-    compile group: 'com.google.guava', name: 'guava', version: '29.0-jre'
+    compile 'org.jetbrains.kotlinx:lincheck:2.11'
+    compile group: 'org.jctools', name: 'jctools-core', version: '3.2.0'
+    compile group: 'it.unimi.dsi', name: 'fastutil', version: '8.5.1'
+    compile group: 'com.google.guava', name: 'guava', version: '30.1-jre'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
@@ -70,4 +70,10 @@ task benchmarkJar(type: Jar, dependsOn: jmhJar) {
         (jmhJar.outputs.files + configurations.jmh + configurations.jmhRuntime)
                 .collect { it.isDirectory() ? it : zipTree(it) }
     }
+}
+
+test {
+    jvmArgs("--add-opens", "java.base/jdk.internal.misc=ALL-UNNAMED",
+            "--add-exports", "java.base/jdk.internal.util=ALL-UNNAMED")
+    maxHeapSize = "4g"
 }
